[gd_scene load_steps=3 format=2]

[ext_resource path="res://scripts/menu/menu.gd" type="Script" id=1]
[ext_resource path="res://assets/temas/botao_start_scene.tres" type="Theme" id=2]

[node name="canvas_layer" type="CanvasLayer"]
pause_mode = 2
process_priority = 1
layer = 2
script = ExtResource( 1 )

[node name="ColorRect" type="ColorRect" parent="."]
margin_right = 480.0
margin_bottom = 288.0
color = Color( 0, 0, 0, 1 )

[node name="botoes" type="Control" parent="."]

[node name="continuar_botao" type="Button" parent="botoes"]
margin_left = 204.0
margin_top = 120.0
margin_right = 276.0
margin_bottom = 130.0
mouse_filter = 2
theme = ExtResource( 2 )
text = "continuar"

[node name="configuracao_botao" type="Button" parent="botoes"]
margin_left = 188.0
margin_top = 136.0
margin_right = 292.0
margin_bottom = 146.0
mouse_filter = 2
theme = ExtResource( 2 )
text = "configurações"

[node name="tela_inicial_salvar_botao" type="Button" parent="botoes"]
margin_left = 156.0
margin_top = 152.0
margin_right = 324.0
margin_bottom = 162.0
mouse_filter = 2
theme = ExtResource( 2 )
text = "tela inicial - salvar"

[node name="tela_inicial_sem_salvar_botao" type="Button" parent="botoes"]
margin_left = 140.0
margin_top = 168.0
margin_right = 340.0
margin_bottom = 178.0
mouse_filter = 2
theme = ExtResource( 2 )
text = "tela inicial - sem salvar"

[connection signal="pressed" from="botoes/continuar_botao" to="." method="_on_continuar_botao_pressed"]
[connection signal="pressed" from="botoes/configuracao_botao" to="." method="_on_configuracao_botao_pressed"]
[connection signal="pressed" from="botoes/tela_inicial_salvar_botao" to="." method="_on_tela_inicial_salvar_botao_pressed"]
[connection signal="pressed" from="botoes/tela_inicial_sem_salvar_botao" to="." method="_on_tela_inicial_sem_salvar_botao_pressed"]
